# pam-discord

./: .gitignore  Cargo.toml  README.md
conf/: sshd  sshd_config
src/: lib.rs
test/: Dockerfile  test.sh
